package main.java.data.dto.enums;

public enum FontFamilyDto {
    CHINESE_SIMPLIFIED,
    CHINESE_TRADITIONAL,
    CYRILLIC,
    DEVANAGARI,
    GEORGIAN,
    GREEK,
    JAPANESE,
    KOREAN,
    LATIN,
    MONO,
    TAMIL,
    THAI
}
