package main.java.data.dto.enums;

public enum FontWeightDto {
    LIGHT,
    NORMAL,
    SEMI_BOLD,
    BLACK
}
