@startuml

skinparam classAttributeIconSize 0
skinparam wrapWidth 400

class TextFormat
class TextElement

class AbstractElement
interface ControlElement

enum FontFamily
enum FontWeight
enum ElementColor

AbstractElement <|-- TextElement
ControlElement <|.. TextElement
TextElement *-- "textFormat\n1..1" TextFormat

TextFormat <-- "fontFamily\n1..1" FontFamily
TextFormat <-- "fontWeight\n1..1" FontWeight
TextFormat <-- "elementColor\n1..1" ElementColor

@enduml